Fix events detail page not showing correctly

--- a/apps/events/styles/cssPageevenement.css
+++ b/apps/events/styles/cssPageevenement.css
@@ -1,22 +1,15 @@
-html{
-    background-color:rgb(245,245,245);
-}
-p,h1,h2,h3,a{
-    font-family: Trebuchet MS
-}
 h1,h2{
     color:#CC0033;
 }
-p{
+#taille p{
     font-size: 15px;
 }
 #taille{
-    width:1000px;
+    max-width:1200px;
     margin:auto;
-    margin-top: 200px;
+    margin-top: 315px;
     background-color:white;
     color:#353535;
-    background-color:rgb(245,245,245);
 }
 #titre{
    text-align: center;
@@ -26,8 +19,10 @@ p{
     z-index: -60;
     position: absolute;
     top:0px;
+    left: 0;
+    right: 0;
     width:100%;
-    height: 400px;
+    height: 500px;
 }
 .infoinitial div
 {
@@ -50,7 +45,7 @@ p{
     padding:2px;
 }
 
-p{
+#taille p{
     text-align: justify;
 }
 .description h1 {
@@ -75,7 +70,7 @@ p{
 .adresse p{
       text-align: justify;
 }
-    
+
 .adresse
 {
     padding-left:40px;
@@ -95,10 +90,6 @@ h1
     font-size: 30px;
     border-bottom: solid #CC0033 1px;
 }
-body
-{
-    margin:5%;
-}
 
 .image
 {
@@ -111,7 +102,6 @@ body
 
 .article{
     background-color: #CC0033;
-    clear:both;
     padding:10px;
     border-radius:10px;
 }
@@ -122,7 +112,7 @@ body
 .article p{
     color:white;
 }
-ul li {
+#taille ul li {
     display:inline-block;
     margin-right:15px;
 }
